BusOne/src/objects/Network_Reference_Mapping_vod__c.object
<CustomObject>
    <description>Stores information of Network reference field values mapping with CRM record types / picklist field values / lookup field values.</description>
    <fields>
        <fullName>CRM_Lookup_ID_vod__c</fullName>
        <description>CRM lookup ID</description>
        <label>CRM Lookup ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Picklist_Value_vod__c</fullName>
        <description>CRM picklist base language value</description>
        <label>CRM Picklist Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Record_Type_Name_vod__c</fullName>
        <description>CRM object record type name</description>
        <label>CRM Record Type Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direction_vod__c</fullName>
        <description>Direction of data flow to which mapping is applied.</description>
        <label>Direction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bidirectional_vod</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Inbound_vod</fullName>
                </value>
                <value>
                    <fullName>Outbound_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>External ID for use in loading and migration of mapping configuration.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Network_Field_Mapping_vod__c</fullName>
        <description>Link to Network Field Mapping</description>
        <label>Network Field Mapping</label>
        <referenceTo>Network_Field_Mapping_vod__c</referenceTo>
        <relationshipLabel>Reference Mappings</relationshipLabel>
        <relationshipName>Network_Reference_Mappings_vod</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Network_Reference_Code_vod__c</fullName>
        <description>Network reference code value</description>
        <label>Network Reference Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Key_vod__c</fullName>
        <description>Unique key preventing duplicate bidirectional Network reference values mappings within the same Network Field Mapping.</description>
        <label>Unique Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Validation_Notes_vod__c</fullName>
        <description>Validation status description if Validation Status is &quot;Invalid&quot;</description>
        <label>Validation Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Validation_Status_vod__c</fullName>
        <description>Mapping validation status</description>
        <inlineHelpText>Mapping validation status</inlineHelpText>
        <label>Validation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unvalidated_vod</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Valid_vod</fullName>
                </value>
                <value>
                    <fullName>Invalid_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Network Reference Mapping</label>
    <nameField>
        <displayFormat>NRM{000000000}</displayFormat>
        <label>Network Reference Mapping ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Network Reference Mappings</pluralLabel>
    <recordTypes>
        <fullName>Boolean_vod</fullName>
        <active>true</active>
        <description>CRM checkbox - Network &apos;Boolean&apos; Reference values mapping.</description>
        <label>Boolean_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Lookup_vod</fullName>
        <active>true</active>
        <description>CRM Lookup - Network Reference values mapping.</description>
        <label>Lookup_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Picklist_vod</fullName>
        <active>true</active>
        <description>CRM Picklist - Network Reference values mapping.</description>
        <label>Picklist_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Record_Type_vod</fullName>
        <active>true</active>
        <description>CRM Record Type - Network Reference values mapping.</description>
        <label>Record_Type_vod</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>